--- a/20.01/index.html
+++ b/20.01/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IntervalTask</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="date">
         <span class="hours">hours</span>:<span class="minutes">minutes</span>:<span class="seconds">seconds</span>
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
