--- a/20.02/index.html
+++ b/20.02/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="content">
         <div class="text-conteiner">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nemo, ipsum laboriosam provident mollitia a omnis debitis natus unde maiores perspiciatis assumenda odit dolorem dignissimos. Commodi facere sunt iure voluptate! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quo dignissimos impedit, nam laudantium vel, adipisci, tempora eaque aliquid ullam reiciendis voluptas voluptatibus corporis dolores? Facilis laborum ullam eos sit.</p>
-
+            <span class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nemo, ipsum laboriosam provident mollitia a omnis debitis natus unde maiores perspiciatis assumenda odit dolorem dignissimos. Commodi facere sunt iure voluptate! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quo dignissimos impedit, nam laudantium vel, adipisci, tempora eaque aliquid ullam reiciendis voluptas voluptatibus corporis dolores? Facilis laborum ullam eos sit.</span>
         </div>
     </div>
 </body>
